@@ -2,6 +2,7 @@ Version 0.12.0 (legolas558)
 * better import options and overwrite settings
 * macros shall return a true/false value to tell about failure
 * commas are again best-preference for tags specification
+* deprecated "Tags" usage for tagging
 * now using 'woas_nowiki' and 'woas_nowiki_multiline' to render nowiki syntax, coupled with <pre/> tag
 * fixed help pages browsing for Opera
 * only check for page title validity when renaming
